--- a/Hayaa.Seed/Hayaa.Seed.csproj
+++ b/Hayaa.Seed/Hayaa.Seed.csproj
@@ -45,9 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Component\DoctorService.cs" />
+    <Compile Include="Component\PlatformServiceFactory.cs" />
     <Compile Include="Component\ProgramDistributedConfig.cs" />
     <Compile Include="Component\ProgramInstanceEnvironment.cs" />
     <Compile Include="Component\ProgramSentinel.cs" />
+    <Compile Include="Util\ServiceFactory.cs" />
     <Compile Include="Config\DefineTable.cs" />
     <Compile Include="Model\AppConfiguration.cs" />
     <Compile Include="Model\ComponentConfigs.cs" />
