--- a/Hayaa.DistributedConfigService.Interface/Hayaa.DistributedConfigService.Interface.csproj
+++ b/Hayaa.DistributedConfigService.Interface/Hayaa.DistributedConfigService.Interface.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,6 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IDistributedConfigService.cs" />
+    <Compile Include="Model\AppSolution.cs" />
+    <Compile Include="Model\ComponentConfig.cs" />
+    <Compile Include="Model\ServiceWorker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
