--- a/Hayaa.Seed/Hayaa.Seed.csproj
+++ b/Hayaa.Seed/Hayaa.Seed.csproj
@@ -55,8 +55,7 @@
     <Compile Include="Model\AppConfiguration.cs" />
     <Compile Include="Model\ComponentConfigs.cs" />
     <Compile Include="Model\ConfigContent.cs" />
-    <Compile Include="Model\ConfigSolution.cs" />
-    <Compile Include="Model\DataAccessConfiguration.cs" />
+    <Compile Include="Model\AppSolution.cs" />
     <Compile Include="Model\InstanceEnvironmentInfo.cs" />
     <Compile Include="Model\Rel_ConfigSolution_AppUser_Component.cs" />
     <Compile Include="ProgramSeed.cs" />
