--- a/Hayaa.Seed/configDemo.config
+++ b/Hayaa.Seed/configDemo.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <AppConfiguration>
-  <BaseConfig IsDistrbutedConfig="true" IsFileLoad="true" IsRemote="true" SolutionId="" Version="1" RemoteConfigServer="http://xxx.xxx.xxx/configservice" LocalConfigFilePath="$:/xxx/xxx/" ConfigFileName="xxx.config" AppID="1" IsVirtualPath="~/config" SentinelUrl="http://xxx.xxx.xxx/config/sentinelservice" IsAppSettingWebConfig="true" IsConnectionStringWebConfig="true"/>
+  <BaseConfig IsDistrbutedConfig="true" IsFileLoad="true" IsRemote="true" SolutionId="" Version="1" RemoteConfigServer="http://xxx.xxx.xxx/configservice" LocalConfigFilePath="$:/xxx/xxx/" ConfigFileName="xxx.config" AppID="1" IsVirtualPath="~/config" SentinelUrl="http://xxx.xxx.xxx/config/sentinelservice" LocalSentinelUrl="http://xxx.xxx.xxx/xxx/Prorgrma_SentinelService.ashx" IsAppSettingWebConfig="true" IsConnectionStringWebConfig="true" TransfersSecurityKey="SecurityKey"/>
 </AppConfiguration>
