--- a/Hayaa.ProgramSeedServiceSite/Hayaa.ProgramSeedServiceSite.csproj
+++ b/Hayaa.ProgramSeedServiceSite/Hayaa.ProgramSeedServiceSite.csproj
@@ -207,6 +207,8 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\RemoteConfigController.cs" />
+    <Compile Include="Controllers\SentinelController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
